<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context="com.madalinaloghin.navigation.MainActivity">

    <Button
        android:id="@+id/btn_open_tabs_activ_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_open_tabs_activ"
        android:layout_marginBottom="50dp"
        android:background="@color/Teal"
        android:text="@string/tabs_activity_acnother"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_open_tabs_activ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_open_navigation_drawer_activ"
        android:layout_marginBottom="50dp"
        android:background="@color/Teal"
        android:text="@string/tabs_activity"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_open_navigation_drawer_activ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/Teal"
        android:text="@string/navigation_drawer_activity"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_open_bottom_navig_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_navigation_drawer_activ"
        android:layout_marginTop="50dp"
        android:background="@color/Teal"
        android:text="@string/bottom_navigation_drawer_activity"
        android:textColor="@color/White" />


    <Button
        android:id="@+id/btn_bottom_nav_with_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_bottom_navig_drawer"
        android:layout_marginTop="50dp"
        android:background="@color/Teal"
        android:text="@string/bottom_nav_with_tabs_activity"
        android:textColor="@color/White" />


</RelativeLayout>
